remove preview features; update dependency